k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-ns
  labels:
    name: nexus-ns
