k8s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: nexus-ns
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: nexus-ns
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/datasources/prometheus-datasource.yaml
              subPath: prometheus-datasource.yaml
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
