k8s/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: nexus-ns
  labels:
    app: minio
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: minio
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: nexus-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
