k8s/nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  namespace: nexus-ns
  labels:
    service: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - port: 9092
      name: s3proxy
      targetPort: 8181
    - port: 8080
      name: web-server
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-deployment
  namespace: nexus-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: hossamelghamry/nexus-tiered-stream-manager
          imagePullPolicy: Always
          ports:
            - containerPort: 8181
              name: s3proxy
            - containerPort: 8080
              name: web-server
